--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -11,8 +11,6 @@
       become: yes
 
     - name: ensure jenkins is installed
-      apt: name=jenkins update_cache=yes
+      apt: name=jenkins state=absent
       become: yes
 
-    - name: ensure jenkins is running
-      service: name=jenkins state=started
