Revert "Updated install"
This reverts commit 512eb7e7b4cf0a457498d122d32b3feaac5ebc3e.

--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -11,6 +11,8 @@
       become: yes
 
     - name: ensure jenkins is installed
-      apt: name=jenkins state=absent
+      apt: name=jenkins update_cache=yes
       become: yes
 
+    - name: ensure jenkins is running
+      service: name=jenkins state=started
